--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+     "build": "tsc",
+    "watch": "tsc -w",
     "start": "electron ."
   },
   "keywords": [
@@ -18,6 +20,8 @@
   "author": "kaoutar",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^11.3.0"
+    "electron": "^11.3.0",
+    "typescript": "^3.7.3"
+
   }
 }
