--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^11.3.0",
+    "electron-rebuild": "^2.3.5",
     "typescript": "^3.7.3"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bindings": "^1.5.0",
+    "java": "^0.12.1",
     "nan": "^2.14.2",
     "node-require": "0.0.10"
   },
